// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotBeverage should render correctly 1`] = `
<div>
  <p>
    I am a HotBeverage and contains 
    coffee
  </p>
  <button
    onClick={[Function]}
  >
    Pour in tea
  </button>
</div>
`;

exports[`HotBeverage should render correctly with tea 1`] = `
<div>
  <p>
    I am a HotBeverage and contains 
    tea
  </p>
  <button
    onClick={[Function]}
  >
    Pour in tea
  </button>
</div>
`;
